[gd_scene load_steps=7 format=3 uid="uid://c3b5n3jdbm4x5"]

[ext_resource type="Script" path="res://Scenes/player.gd" id="1_ime45"]
[ext_resource type="PackedScene" uid="uid://bkpsefooon0d2" path="res://Scenes/bullet.tscn" id="2_3dycr"]
[ext_resource type="Texture2D" uid="uid://cft0pbbewuoiy" path="res://Art/player.png" id="3_v7ocf"]
[ext_resource type="Script" path="res://Scenes/PlayerUI.gd" id="4_wdq5k"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ybm14"]
size = Vector2(20, 24)

[sub_resource type="CircleShape2D" id="CircleShape2D_25rif"]
radius = 85.235

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_ime45")
bullet = ExtResource("2_3dycr")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("3_v7ocf")
hframes = 8
vframes = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, 1)
shape = SubResource("RectangleShape2D_ybm14")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 1)
shape = SubResource("CircleShape2D_25rif")

[node name="ShootTimer" type="Timer" parent="."]
autostart = true

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(3, 3)

[node name="Firepoint" type="Node2D" parent="." groups=["player"]]
position = Vector2(11, 0)

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("4_wdq5k")

[node name="MoneyAmount" type="Label" parent="Control"]
layout_mode = 0
offset_left = -133.0
offset_top = -107.0
offset_right = -93.0
offset_bottom = -81.0
text = "0"

[node name="MoneyText" type="Label" parent="Control"]
layout_mode = 0
offset_left = -192.0
offset_top = -107.0
offset_right = -152.0
offset_bottom = -84.0
text = "Money: "

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_shoot_timer_timeout"]
